QR Code Implementation

--- a/qrcodes.html
+++ b/qrcodes.html
@@ -39,12 +39,15 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
   <script>
     const buildings = [
-      { id: "CAFA", name: "College of Architecture and Fine Arts" },
-      { id: "LIB", name: "Main Library" },
-      { id: "REG", name: "Registrar’s Office" }
+      { id: "MAB", name: "Main Academic Building" },
+      { id: "NALLRC", name: "Ninoy Aquino Library and Learning Resources Center" },
+      { id: "CDR", name: "Charlie del Rosario Building" },
+      { id: "LAGOON", name: "PUP Lagoon" },
+      { id: "CEA", name: "College of Engineering and Architecture" },
+      { id: "HASMIN", name: "Hasmin Building" }
     ];
 
-    const BASE_URL = "pup-wayfinding-campus-site.vercel.app";
+    const BASE_URL = "https://pup-wayfinding-campus-site.vercel.app/";
 
     const qrGrid = document.getElementById("qr-grid");
 
