--- a/qrcodes.html
+++ b/qrcodes.html
@@ -40,10 +40,17 @@
   <h1>PUP Campus QR Codes</h1>
   <div class="qr-grid" id="qr-grid"></div>
 
-  <!-- Load QRCode.js first -->
-  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
+  <!-- ✅ Load the QRCode library FIRST, use 'defer' so it loads BEFORE the page finishes -->
+  <script defer src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js"></script>
+
+  <!-- ✅ Main Script AFTER the page has rendered -->
   <script>
-    window.onload = function() {
+    document.addEventListener("DOMContentLoaded", function() {
+      if (typeof QRCode === "undefined") {
+        console.error("QRCode.js failed to load. Check CDN link.");
+        return;
+      }
+
       const buildings = [
         { id: "MAB", name: "Main Academic Building" },
         { id: "NALLRC", name: "Ninoy Aquino Library and Learning Resources Center" },
@@ -65,6 +72,7 @@
         QRCode.toCanvas(canvas, `${BASE_URL}${b.id}`, { width: 200 }, (err) => {
           if (err) {
             console.error(`Error generating QR for ${b.name}:`, err);
+            return;
           }
         });
 
@@ -75,7 +83,7 @@
         qrDiv.appendChild(label);
         qrGrid.appendChild(qrDiv);
       });
-    };
+    });
   </script>
 </body>
 </html>
