--- a/index.html
+++ b/index.html
@@ -42,38 +42,40 @@
 
   <iframe id="map" allowfullscreen></iframe>
 
+  <!-- 🔽 This goes just below the map -->
   <img id="bldg-image" alt="Building Image" style="margin-top: 1rem; width: 100%; max-height: 400px; object-fit: cover; border-radius: 10px;" />
 
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const buildingId = params.get("id");
+<script>
+  const params = new URLSearchParams(window.location.search);
+  const buildingId = params.get("id");
 
-    if (buildingId) {
-      fetch("buildings.json")
-        .then(res => res.json())
-        .then(data => {
-          const b = data.find(b => b.id === buildingId);
-          if (!b) return;
+  if (buildingId) {
+    fetch("buildings.json")
+      .then(res => res.json())
+      .then(data => {
+        const b = data.find(b => b.id === buildingId);
+        if (!b) return;
 
-          document.getElementById("bldg-name").textContent = b.name;
-          document.getElementById("bldg-id").textContent = b.id;
-          document.getElementById("bldg-year").textContent = b.year;
-          document.getElementById("bldg-desc").textContent = b.description;
-          document.getElementById("bldg-history").textContent = b.history;
+        document.getElementById("bldg-name").textContent = b.name;
+        document.getElementById("bldg-id").textContent = b.id;
+        document.getElementById("bldg-year").textContent = b.year;
+        document.getElementById("bldg-desc").textContent = b.description;
+        document.getElementById("bldg-history").textContent = b.history;
 
-          const map = document.getElementById("map");
-          map.src = `https://maps.google.com/maps?q=${b.lat},${b.lng}&z=17&output=embed`;
-        });
-    } else {
-      document.getElementById("bldg-name").textContent = "No building ID provided.";
-    }
+        const map = document.getElementById("map");
+        map.src = `https://maps.google.com/maps?q=${b.lat},${b.lng}&z=17&output=embed`;
 
-    // Load image based on building ID
-    const image = document.getElementById("bldg-image");
-    image.src = `images/${b.id}.jpg`; // or .png depending on your image extension
-    image.onerror = () => {
-      image.style.display = "none"; // Hide if image not found
-    };
-  </script>
+        // ✅ Set building image after b is defined
+        const image = document.getElementById("bldg-image");
+        image.src = `images/${b.id}.jpg`;
+        image.style.display = "block";
+        image.onerror = () => {
+          image.style.display = "none"; // Hide if not found
+        };
+      });
+  } else {
+    document.getElementById("bldg-name").textContent = "No building ID provided.";
+  }
+</script>
 </body>
 </html>
