--- a/qrcodes.html
+++ b/qrcodes.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <title>PUP Campus QR Codes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Montserrat', sans-serif;
       padding: 2rem;
       background: #f8f8f8;
     }
     h1 {
+      font-family: 'Bebas Neue', cursive;
       text-align: center;
       color: crimson;
+      font-size: 3rem;
+      letter-spacing: 1px;
     }
     .qr-grid {
       display: grid;
@@ -33,7 +36,7 @@
       transform: scale(1.03);
     }
     .qr-item p {
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       font-weight: 500;
       margin-top: 0.5rem;
     }
@@ -46,7 +49,6 @@
   <h1>PUP Campus QR Codes</h1>
   <div class="qr-grid" id="qr-grid"></div>
 
-  <!-- ✅ Load official QRCode.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
   <script>
@@ -66,7 +68,6 @@
       const qrDiv = document.createElement("div");
       qrDiv.className = "qr-item";
 
-      // Wrapper link
       const link = document.createElement("a");
       link.href = `${BASE_URL}${b.id}`;
       link.target = "_blank";
